--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "node src/index.js",
     "start": "node src/index.js",
-    "init:db": "node scripts/init-db.js"
+    "init:db": "node scripts/init-db.js",
+    "db:list": "node scripts/list-databases.js",
+    "db:check": "node scripts/check-db-connection.js",
+    "db:export-schema": "node scripts/export-db-schema.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
