--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "functions": {
-    "api/[...path].js": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
